[gd_scene load_steps=48 format=2]

[ext_resource path="res://resources/MainMenu/PASTA.png" type="Texture" id=1]
[ext_resource path="res://resources/MainMenu/PASTA_HOVER.png" type="Texture" id=2]
[ext_resource path="res://scr/Menus/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/MainMenu/CELULAR_1_hover.png" type="Texture" id=4]
[ext_resource path="res://resources/MainMenu/MESA_sem_objeto.png" type="Texture" id=5]
[ext_resource path="res://resources/MainMenu/TABLET_hover.png" type="Texture" id=6]
[ext_resource path="res://resources/MainMenu/TABLET.png" type="Texture" id=7]
[ext_resource path="res://resources/MainMenu/CELULAR_2_hover.png" type="Texture" id=8]
[ext_resource path="res://resources/MainMenu/CELULAR_3_hover.png" type="Texture" id=9]
[ext_resource path="res://resources/MainMenu/CALENDARIO_1_hover.png" type="Texture" id=10]
[ext_resource path="res://resources/MainMenu/CALENDARIO_1.png" type="Texture" id=11]
[ext_resource path="res://resources/MainMenu/CELULAR_4_hover.png" type="Texture" id=12]
[ext_resource path="res://resources/MainMenu/CELULAR_4.png" type="Texture" id=13]
[ext_resource path="res://resources/MainMenu/CELULAR_1.png" type="Texture" id=14]
[ext_resource path="res://resources/MainMenu/CELULAR_2.png" type="Texture" id=15]
[ext_resource path="res://resources/MainMenu/CELULAR_3.png" type="Texture" id=16]
[ext_resource path="res://resources/MainMenu/CALENDARIO_5_hover.png" type="Texture" id=17]
[ext_resource path="res://resources/MainMenu/CALENDARIO_5.png" type="Texture" id=18]
[ext_resource path="res://resources/MainMenu/CALENDARIO_3_hover.png" type="Texture" id=19]
[ext_resource path="res://resources/MainMenu/CALENDARIO_2.png" type="Texture" id=20]
[ext_resource path="res://resources/MainMenu/CALENDARIO_2_hover.png" type="Texture" id=21]
[ext_resource path="res://resources/MainMenu/CALENDARIO_4_hover.png" type="Texture" id=22]
[ext_resource path="res://resources/MainMenu/CALENDARIO_3.png" type="Texture" id=23]
[ext_resource path="res://resources/MainMenu/CALENDARIO_4.png" type="Texture" id=24]
[ext_resource path="res://resources/MainMenu/REF.png" type="Texture" id=25]
[ext_resource path="res://resources/MainMenu/Config_hover.png" type="Texture" id=26]
[ext_resource path="res://resources/MainMenu/Config_click.png" type="Texture" id=27]
[ext_resource path="res://resources/MainMenu/Config.png" type="Texture" id=28]
[ext_resource path="res://scr/DataManagement/Mundo.tscn" type="PackedScene" id=29]
[ext_resource path="res://resources/MainMenu/botão-fimdodia.png" type="Texture" id=30]
[ext_resource path="res://resources/MainMenu/botão-fimdodia-normal.png" type="Texture" id=31]
[ext_resource path="res://resources/MainMenu/CELULAR_0.png" type="Texture" id=32]
[ext_resource path="res://resources/MainMenu/CELULAR_0_hover.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 262.285, 289.511 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 259.647, 174.973 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "c0",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "c0h",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "c4h",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "c3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "c1h",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "c2h",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "c2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "c3h",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "c1",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "c4",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 78.9077, 136.061 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "c5h",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "c4h",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "c3",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "c1h",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "c2h",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "c5",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "c2",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "c3h",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "c1",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "c4",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 276.309, 76.8612 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 32, 32.5 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 23, 17.5 )

[sub_resource type="Animation" id=9]
resource_name = "Nova Animação"
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fadein/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fadein/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.188235, 0.0588235, 0.0588235, 0 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 3 )

[node name="Mundo" parent="." instance=ExtResource( 29 )]

[node name="Ref" type="Sprite" parent="."]
visible = false
position = Vector2( 961, 542 )
texture = ExtResource( 25 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Itens" type="Node" parent="."]

[node name="Pasta" type="Area2D" parent="Itens"]
position = Vector2( 929, 565 )

[node name="Sprite" type="AnimatedSprite" parent="Itens/Pasta"]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/Pasta"]
position = Vector2( 6.06824, 0.455505 )
rotation = 0.109956
shape = SubResource( 2 )

[node name="Tablet" type="Area2D" parent="Itens"]

[node name="Sprite" type="AnimatedSprite" parent="Itens/Tablet"]
position = Vector2( 1576, 701 )
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/Tablet"]
position = Vector2( 1570, 698 )
rotation = -0.366519
shape = SubResource( 4 )

[node name="Celular" type="Area2D" parent="Itens"]

[node name="Sprite" type="AnimatedSprite" parent="Itens/Celular"]
position = Vector2( 361, 585 )
frames = SubResource( 5 )
animation = "c0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/Celular"]
position = Vector2( 366.694, 588.286 )
rotation = -0.523599
shape = SubResource( 6 )

[node name="Calendar" type="Area2D" parent="Itens"]

[node name="Sprite" type="AnimatedSprite" parent="Itens/Calendar"]
position = Vector2( 1563, 204 )
frames = SubResource( 11 )
animation = "c1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/Calendar"]
position = Vector2( 1458.77, 200.369 )
rotation = 0.331613
shape = SubResource( 12 )

[node name="Config" type="Area2D" parent="Itens"]
position = Vector2( -19, 0 )

[node name="Sprite" type="AnimatedSprite" parent="Itens/Config"]
position = Vector2( 1857, 66 )
frames = SubResource( 13 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/Config"]
position = Vector2( 1856, 66 )
shape = SubResource( 14 )

[node name="EndDay" type="Area2D" parent="Itens"]
position = Vector2( -1455, 212 )

[node name="Sprite" type="AnimatedSprite" parent="Itens/EndDay"]
position = Vector2( 1855, 63 )
frames = SubResource( 15 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itens/EndDay"]
position = Vector2( 1854, 65.5 )
shape = SubResource( 16 )

[node name="Fadein" type="AnimationPlayer" parent="."]
autoplay = "Nova Animação"
"anims/Nova Animação" = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Fade" type="ColorRect" parent="Fadein"]
margin_left = 2.0
margin_top = -7.0
margin_right = 1916.0
margin_bottom = 1096.0
color = Color( 0.188235, 0.0588235, 0.0588235, 0 )

[connection signal="input_event" from="Itens/Pasta" to="." method="_on_Pasta_input_event"]
[connection signal="mouse_entered" from="Itens/Pasta" to="." method="_on_Pasta_mouse_entered"]
[connection signal="mouse_exited" from="Itens/Pasta" to="." method="_on_Pasta_mouse_exited"]
[connection signal="input_event" from="Itens/Tablet" to="." method="_on_Tablet_input_event"]
[connection signal="mouse_entered" from="Itens/Tablet" to="." method="_on_Tablet_mouse_entered"]
[connection signal="mouse_exited" from="Itens/Tablet" to="." method="_on_Tablet_mouse_exited"]
[connection signal="input_event" from="Itens/Celular" to="." method="_on_Celular_input_event"]
[connection signal="mouse_entered" from="Itens/Celular" to="." method="_on_Celular_mouse_entered"]
[connection signal="mouse_exited" from="Itens/Celular" to="." method="_on_Celular_mouse_exited"]
[connection signal="input_event" from="Itens/Calendar" to="." method="_on_Calendar_input_event"]
[connection signal="mouse_entered" from="Itens/Calendar" to="." method="_on_Calendar_mouse_entered"]
[connection signal="mouse_exited" from="Itens/Calendar" to="." method="_on_Calendar_mouse_exited"]
[connection signal="input_event" from="Itens/Config" to="." method="_on_Config_input_event"]
[connection signal="mouse_entered" from="Itens/Config" to="." method="_on_Config_mouse_entered"]
[connection signal="mouse_exited" from="Itens/Config" to="." method="_on_Config_mouse_exited"]
[connection signal="input_event" from="Itens/EndDay" to="." method="_on_EndDay_input_event"]
[connection signal="mouse_entered" from="Itens/EndDay" to="." method="_on_EndDay_mouse_entered"]
[connection signal="mouse_exited" from="Itens/EndDay" to="." method="_on_EndDay_mouse_exited"]
[connection signal="animation_finished" from="Fadein" to="." method="_on_Fade_in_animation_finished"]
